# weather_cli

./: README.md  goweather.py  pyproject.toml  weather.py
