[tool.poetry]
name = "go_weather_cli"
version = "0.1.0"
description = "cli tool for terminal display of weather info at given zipcode"
authors = ["Your Name <you@example.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
argparse = "^1.4.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
